After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 740822 - av: use GMutex instead of deprecated GStaticMutex
av: use GMutex instead of deprecated GStaticMutex
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-libav
git master
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-11-27 19:54 UTC by Aurélien Zanelli
Modified: 2014-11-28 00:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
av: use GMutex instead of deprecated GStaticMutex (1.62 KB, patch)
2014-11-27 19:55 UTC, Aurélien Zanelli
committed Details | Review

Description Aurélien Zanelli 2014-11-27 19:54:43 UTC
Currently I get fatal warning when compiling gst-libav with glib-2.42 due to the fact that GStaticMutex is deprecated:

I propose to use GMutex instead since it can be statically allocated since glib-2.32.
Comment 1 Aurélien Zanelli 2014-11-27 19:55:22 UTC
Created attachment 291682 [details] [review]
av: use GMutex instead of deprecated GStaticMutex
Comment 2 Tim-Philipp Müller 2014-11-28 00:33:09 UTC
Pushed, thanks:

commit 728444168acce4310645f173a74034a7ac1c1732
Author: Aurélien Zanelli <aurelien.zanelli@darkosphere.fr>
Date:   Thu Nov 27 20:44:31 2014 +0100

    av: use GMutex instead of deprecated GStaticMutex
    
    https://bugzilla.gnome.org/show_bug.cgi?id=740822