av: use GMutex instead of deprecated GStaticMutex

https://bugzilla.gnome.org/show_bug.cgi?id=740822